# spot-subaru

./: INSTALL.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
spot-subaru/plugins/: __init__.py
spot_subaru/plugins/: Gen2Int.py  HSCPlanner.py  LTCS.py  RotCalc.py  SubaruOCS.py  __init__.py
spot_subaru/util/: ltcs.py  tsc_track.py
