[build-system]
requires = ["setuptools>=64",
            "setuptools_scm[toml]>=7",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-subaru"
description = "Site Planning and Observation Tool (Subaru plugins)"
authors = [{name = "SPOT Maintainers", email = "ocs@naoj.org"}]
license = {text = "BSD"}
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "spot-nik>=1.2.0",
]

[project.entry-points.spot_plugins]
SubaruOCS = "spot_subaru.plugins:setup_SubaruOCS"
Gen2Int = "spot_subaru.plugins:setup_Gen2Int"
RotCalc = "spot_subaru.plugins:setup_RotCalc"
LTCS = "spot_subaru.plugins:setup_LTCS"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE.md"]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]
write_to = "spot_subaru/version.py"
version_scheme = "release-branch-semver"

[tool.ruff]
# match the historical flake8 line length
line-length = 79

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F), to mirror the previous flake8 setup
select = ["E", "W", "F"]
# Ignoring these (carried over from the old [flake8] config):
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# F841: local variable is assigned to but never used
# (flake8's E129, I100/I101 and W504 are not implemented by ruff, so dropped)
ignore = ["E265", "E266", "E402", "E501", "E741", "F841"]
