[bdist_wheel]
universal = 1

[metadata]
name = spot-subaru
description = Site Planning and Observation Tool (Subaru plugins)
author = SPOT Maintainers
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.md

[options]
zip_safe = False
packages = find:
python_requires = >=3.11
install_requires =
    spot-nik>=0.4.0
setup_requires = setuptools_scm
include_package_data = True

[options.entry_points]
spot_plugins =
    SubaruOCS = spot_subaru.plugins:setup_SubaruOCS
    RotCalc = spot_subaru.plugins:setup_RotCalc
    HSCPlanner = spot_subaru.plugins:setup_HSCPlanner

[flake8]
# Ignoring these for now:
# E129: visually indented line with same indent as next logical line
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# I100: import statements are in the wrong order
# I101: imported names are in the wrong order
# W504: line break after binary operator
# F841: local variable '%s' is assigned to but never used
ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841
